# AUTO_AutoForm

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_TASK_PROMPT.md  CONTRIBUTING.md  DEVELOPERS.md  INSTALL.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  UNINSTALL.md  card_schema.yaml  codex_mcp_config.autoform-agent.toml  environment.yml  eval_queries.jsonl  naming_policy.md  pyproject.toml  repo_scaffold.md  script_registry.yaml  source_registry.csv  start_autoform_agent.cmd  start_autoform_agent.ps1
.playwright-cli/: page-2026-06-05T06-46-59-377Z.yml  page-2026-06-05T06-49-18-343Z.yml  page-2026-06-05T06-49-43-466Z.yml  page-2026-06-05T06-51-50-910Z.yml  page-2026-06-05T06-53-43-801Z.yml
AutoForm_MCP/: INSTALL.md  README.md  README.zh-CN.md  codex_mcp_config.autoform-mcp.toml  pyproject.toml
AutoForm_MCP/autoform_mcp_agent/: __init__.py  cli.py  r12_demo.py  release.py
AutoForm_MCP/autoform_mcp_agent/mcp_tools/: __init__.py  commands.py  environment.py  gui.py  jobs.py  materials.py  project.py  queue.py  quicklink.py  reference.py  release.py  reporting.py  scripts.py  solver.py  status.py
AutoForm_MCP/docs/: api_runtime_call_chain.md  beginner_onboarding_zh.md
AutoForm_MCP/tests/: conftest.py  test_gui_automation.py  test_mcp_tools.py  test_process.py  test_project_workflow.py  test_r12_demo.py
autoform_agent/: __init__.py  __main__.py  af_api.py  agent_runtime.py  cli.py  commands.py  config.py  coverage.py  credentials.py  diagnostics.py  enterprise_data.py  enterprise_process_executor.py  enterprise_process_planning.py  extension.py  (+29 more)
(+381 files in other folders)
