[project]
name = "autoform-agent"
version = "1.0.0"
description = "Local AutoForm control helpers with a direct DeepSeek API runtime and MCP workflows."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
